fixed the cetner align of the layout header in the class schedule layoput

--- a/assets/stylus/app.styl
+++ b/assets/stylus/app.styl
@@ -774,6 +774,8 @@ table
                 margin: 0 0 0 30px
                 .layout_header
                     justify-content: center
+                    .etc
+                        flex: 0 0 5%
                     .info
                         flex: 1 0 10%
                         text-align: center
